@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
class Account {
- Player
----
+ Account (Player)
}

class Player {
-Name
----
+getName()
}
class DieCup {
- FaceValue1
- FaceValue2
- maxFaceValue
- sum
----
+roll()
+DieCup(int DieSides)
}
class Print {
----
+player1Name()
+player2Name()
+randomStart()
+whoStarts(name)
}

class Game {
-Player1
-Player2
-coin
----
+gameStart()
}
class Board{
String Squares[ ]
int Values[ ]
----
getSquare()
getValue()
}

Print "1..*  "<-- "1"Game
Game "1     " --> "1"DieCup
Player "1" --> "1 "Account
Board "1" <- "1" Game
Player "2 " <-- "1  "Game

@enduml